; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-mc33880.c_mc33880_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-mc33880.c_mc33880_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spi_device = type { i32 }
%struct.mc33880 = type { i32, i32 }

@ENODEV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.spi_device*)* @mc33880_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mc33880_remove(%struct.spi_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.spi_device*, align 8
  %4 = alloca %struct.mc33880*, align 8
  store %struct.spi_device* %0, %struct.spi_device** %3, align 8
  %5 = load %struct.spi_device*, %struct.spi_device** %3, align 8
  %6 = call %struct.mc33880* @spi_get_drvdata(%struct.spi_device* %5)
  store %struct.mc33880* %6, %struct.mc33880** %4, align 8
  %7 = load %struct.mc33880*, %struct.mc33880** %4, align 8
  %8 = icmp ne %struct.mc33880* %7, null
  br i1 %8, label %12, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* @ENODEV, align 4
  %11 = sub nsw i32 0, %10
  store i32 %11, i32* %2, align 4
  br label %19

12:                                               ; preds = %1
  %13 = load %struct.mc33880*, %struct.mc33880** %4, align 8
  %14 = getelementptr inbounds %struct.mc33880, %struct.mc33880* %13, i32 0, i32 1
  %15 = call i32 @gpiochip_remove(i32* %14)
  %16 = load %struct.mc33880*, %struct.mc33880** %4, align 8
  %17 = getelementptr inbounds %struct.mc33880, %struct.mc33880* %16, i32 0, i32 0
  %18 = call i32 @mutex_destroy(i32* %17)
  store i32 0, i32* %2, align 4
  br label %19

19:                                               ; preds = %12, %9
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local %struct.mc33880* @spi_get_drvdata(%struct.spi_device*) #1

declare dso_local i32 @gpiochip_remove(i32*) #1

declare dso_local i32 @mutex_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
